--- a/app/src/main/res/layout/fragment_home_video.xml
+++ b/app/src/main/res/layout/fragment_home_video.xml
@@ -1,219 +1,247 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:bind="http://schemas.android.com/apk/res/android" >
+<layout xmlns:bind="http://schemas.android.com/apk/res/android">
 
     <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-        android:descendantFocusability="blocksDescendants"
-    android:layout_height="match_parent">
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:focusableInTouchMode="true"
-        android:layout_height="@dimen/_160sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <RelativeLayout
-        android:id="@+id/overlay_layout"
-        android:layout_width="match_parent"
-        android:focusableInTouchMode="true"
-        android:layout_height="@dimen/_80sdp"
-        android:layout_marginTop="@dimen/_110sdp"
-        android:background="@drawable/slider_black_gradiant"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pager">
-
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/home_video_gradient"
-            android:layout_height="@dimen/_55sdp">
+            android:layout_height="match_parent"
+            android:descendantFocusability="blocksDescendants">
 
-        </RelativeLayout>
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_160sdp"
+                android:focusableInTouchMode="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <RelativeLayout
+                android:id="@+id/overlay_layout"
                 android:layout_width="match_parent"
-                android:layout_above="@+id/indicator"
-                android:gravity="center"
-                android:layout_marginBottom="@dimen/_7sdp"
-                android:layout_height="wrap_content">
-
-
+                android:layout_height="@dimen/_80sdp"
+                android:layout_marginTop="@dimen/_110sdp"
+                android:background="@drawable/slider_black_gradiant"
+                android:focusableInTouchMode="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/pager">
 
                 <RelativeLayout
-                    android:id="@+id/play_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:background="@drawable/rounded_corner_white_background"
-                    android:paddingLeft="@dimen/_13sdp"
-                    android:paddingRight="@dimen/_13sdp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true">
-
-                    <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
-                        android:id="@+id/play_textview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/_4sdp"
-                        android:paddingTop="@dimen/_4sdp"
-                        android:paddingRight="@dimen/_5sdp"
-                        android:paddingLeft="@dimen/_3sdp"
-                        android:layout_toRightOf="@+id/play_icon_imageview"
-                        android:textSize="@dimen/_11sdp"
-                        android:text="@string/play"
-                        android:textColor="@color/colorBlack" />
-
-                    <ImageView
-                        android:id="@+id/play_icon_imageview"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:layout_centerVertical="true"
-                        android:tint="@color/colorBlack"
-                        android:src="@drawable/audio_play_black" />
-
-                    <ImageView
-                        android:id="@+id/test_imageview"
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
-                        android:layout_centerVertical="true"
-                        android:tint="@color/colorBlack"
-                        android:visibility="gone" />
-
-
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_55sdp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/home_video_gradient">
 
                 </RelativeLayout>
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/indicator"
+                        android:layout_marginBottom="@dimen/_7sdp"
+                        android:gravity="center">
+
+
+                        <RelativeLayout
+                            android:id="@+id/play_layout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/rounded_corner_white_background"
+                            android:gravity="center"
+                            android:paddingLeft="@dimen/_13sdp"
+                            android:paddingRight="@dimen/_13sdp">
+
+                            <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
+                                android:id="@+id/play_textview"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_toRightOf="@+id/play_icon_imageview"
+                                android:paddingLeft="@dimen/_3sdp"
+                                android:paddingTop="@dimen/_4sdp"
+                                android:paddingRight="@dimen/_5sdp"
+                                android:paddingBottom="@dimen/_4sdp"
+                                android:text="@string/play"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/_11sdp" />
+
+                            <ImageView
+                                android:id="@+id/play_icon_imageview"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/audio_play_black"
+                                android:tint="@color/colorBlack" />
+
+                            <ImageView
+                                android:id="@+id/test_imageview"
+                                android:layout_width="@dimen/_20sdp"
+                                android:layout_height="@dimen/_20sdp"
+                                android:layout_centerVertical="true"
+                                android:tint="@color/colorBlack"
+                                android:visibility="gone" />
+
+
+                        </RelativeLayout>
+
+
+                    </RelativeLayout>
+
+
+                </LinearLayout>
+
+
+                <com.viewpagerindicator.CirclePageIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/_7sdp"
+                    android:gravity="bottom"
+                    android:padding="10dip"
+                    app:centered="true"
+                    app:fillColor="#ffffff"
+                    app:pageColor="#ACAEB0"
+                    app:snap="false"
+                    app:strokeColor="#00000000" />
+
 
             </RelativeLayout>
 
-
-        </LinearLayout>
-
-
-
-        <com.viewpagerindicator.CirclePageIndicator
-            android:id="@+id/indicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/_7sdp"
-            android:gravity="bottom"
-            android:padding="10dip"
-            app:centered="true"
-            app:fillColor="#ffffff"
-            app:strokeColor="#00000000"
-            app:pageColor="#ACAEB0"
-            app:snap="false" />
-
-
-
-    </RelativeLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/chat_header"
-            android:text="KiKi Chats"
-            android:visibility="gone"
-            android:textStyle="bold"
-            android:textSize="@dimen/_14sdp"
-            android:textColor="@color/md_white_1000"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            app:layout_constraintTop_toBottomOf="@+id/overlay_layout"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chat_channels_recyclerview"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:scrollbars="none"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_header"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <LinearLayout
-            android:id="@+id/chat_web_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chat_channels_recyclerview">
-
             <TextView
+                android:id="@+id/chat_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/chat_web_header"
-                android:text="Chats"
-                android:textStyle="bold"
-                android:textSize="@dimen/_14sdp"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:text="KiKi Chats"
                 android:textColor="@color/md_white_1000"
-                android:layout_marginStart="@dimen/activity_horizontal_margin" />
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/overlay_layout" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/chat_web_recyclerview"
+                android:id="@+id/chat_channels_recyclerview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="2dp"
+                android:scrollbars="none"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/chat_header"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <LinearLayout
+                android:id="@+id/chat_web_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="visible"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/chat_channels_recyclerview">
+
+                <TextView
+                    android:id="@+id/chat_web_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:text="Chats"
+                    android:textColor="@color/md_white_1000"
+                    android:textSize="@dimen/_14sdp"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/chat_web_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:scrollbars="none" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/continue_watching_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:scrollbars="none" />
+                android:descendantFocusability="blocksDescendants"
+                android:orientation="vertical"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/chat_web_layout">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/continue_watching_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:text="Continue Watching"
+                    android:textColor="@color/md_white_1000"
+                    android:textSize="@dimen/_14sdp"
+                    android:textStyle="bold" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycleview_channels_programs"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:scrollbars="none"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chat_web_layout"
-            app:layout_constraintVertical_bias="0.0" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/continue_watching_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin_iiner"
+                    android:clipToPadding="false"
+                    android:padding="4dp" />
 
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/aviProgressRecycler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/_35sdp"
-            android:visibility="visible"
-            app:indicatorColor="@color/colorPrimary"
-            app:indicatorName="BallSpinFadeLoaderIndicator"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/overlay_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleview_channels_programs"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:scrollbars="none"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/continue_watching_layout"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/aviProgressRecycler"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="@dimen/_35sdp"
+                android:layout_marginEnd="8dp"
+                android:visibility="visible"
+                app:indicatorColor="@color/colorPrimary"
+                app:indicatorName="BallSpinFadeLoaderIndicator"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/overlay_layout" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 </layout>
